spotify service.ts

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<ul>
+  <li *ngFor="let p of countries">
+    {{ p.name }}
+    <img src='{{ p.flag }}' alt="" width="40" height="20" srcset="">
+  </li>
+
+</ul>
