--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,5 @@
-<p>
-  search works!
-</p>
+<div class="row">
+  <div class="col">
+    <input #query type="text" (keyup)="buscar(query.value)" class="" placeholder="Search Any Artist">
+  </div>
+</div>
