--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="search" >Link</a>
+        <a class="nav-link" routerLink="search" >Search</a>
       </li>
     </ul>
   </div>
