--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -1,6 +1,8 @@
 p {
     font-size: 25px;
 }
-.minsize{
-    /* width: 15%; */
+.card-title{
+    font-size: 25px;
+    font: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
